# T3clone_back

./: Dockerfile  LICENSE  docker-compose.yml  example.env  pyproject.toml
src/: conf.py  connection_manager.py  main.py  models.py  utils.py  websocket_controller.py
src/auth/: __init__.py  controller.py  dto.py  repository.py
src/clients/: __init__.py  deepseek_client.py  dto.py
src/ws/: __init__.py  connection_manager.py  controller.py  create_chat.py  new_message.py  send_chats.py
